--- a/views/manage/header.ejs
+++ b/views/manage/header.ejs
@@ -6,71 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        #app {
-            position: absolute;
-            top: 0px;
-            bottom: 0px;
-            width: 100%;
-        }
-
-        .container {
-            position: absolute;
-            top: 0px;
-            bottom: 0px;
-            width: 100%;
-        }
-
-        .header {
-            height: 60px;
-            line-height: 60px;
-            background: #393D49;
-            color: #fff;
-        }
-
-        .logo {
-            width: 230px;
-            font-size: 20px;
-            border-color: rgba(238, 241, 146, 0.3);
-            border-right-width: 1px;
-            border-right-style: solid;
-        }
-
-        .logo i {
-            font-size: 25px;
-            margin-left: 20px;
-        }
-
-        .main {
-            display: flex;
-            position: absolute;
-            top: 60px;
-            width: 100%;
-            bottom: 0px;
-            overflow: hidden;
-        }
-
-        .menu-expanded {
-            flex: 0 0 230px;
-            width: 230px;
-            background: #393D49;
-            border-color: rgba(238, 241, 146, 0.3);
-            border-top-width: 1px;
-            border-top-style: solid;
-        }
-
-        .content-container {
-            flex: 1;
-            overflow-y: scroll;
-            padding: 20px;
-        }
-    </style>
     <link rel="stylesheet" href="/libs/layui/css/layui.css">
+    <link rel="stylesheet" href="/css/manage.css">
 </head>
 
 <body>
