--- a/views/show/show-header.ejs
+++ b/views/show/show-header.ejs
@@ -13,21 +13,11 @@
 	</div>
 	<div id="show-container">
 		<div class="show-main">
-			<div class="show-person-title">
-				<h1><%=people[0].name%></h1>
+			<div class="show-title">
+				<h1>网安支队历年立功授奖情况</h1>
 			</div>
 			<div class="show-content">
-				<div class="show-one-person">
-					<img src="/image/headers/<%=people[0].pic%>" alt="">
+				<div class="show-logo">
+					<img src="/image/logo.png" alt="">
 				</div>
 				<div class="show-show">
-					<div class="slick-for">
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<script src="/libs/layui/layui.all.js"></script>
-	<script type="text/javascript" src="libs/jquery/dist/jquery.min.js"></script>
-</body>
-</html>
