--- a/views/manage/components/nav-tree.ejs
+++ b/views/manage/components/nav-tree.ejs
@@ -6,26 +6,26 @@
       <dd>
         <a href="/manage/getPerizeAdd">&nbsp&nbsp新增得奖</a>
       </dd>
-      <dd>
+<!--       <dd>
         <a href="">&nbsp&nbsp所有得奖</a>
-      </dd>
+      </dd> -->
       <dd>
-        <a href="">&nbsp&nbsp新增奖项</a>
+        <a href="/manage/addPrize">&nbsp&nbsp新增奖项</a>
       </dd>
-      <dd>
+<!--       <dd>
         <a href="">&nbsp&nbsp所有奖项</a>
-      </dd>
+      </dd> -->
     </dl>
   </li>
   <li class="layui-nav-item layui-nav-itemed">
     <a href="javascript:;">部门管理</a>
     <dl class="layui-nav-child">
       <dd>
-        <a href="">&nbsp&nbsp新增部门</a>
+        <a href="/manage/addDepartment">&nbsp&nbsp新增部门</a>
       </dd>
-      <dd>
+<!--       <dd>
         <a href="">&nbsp&nbsp所有部门</a>
-      </dd>
+      </dd> -->
     </dl>
   </li>
   <li class="layui-nav-item layui-nav-itemed">
@@ -34,16 +34,16 @@
       <dd>
         <a href="/manage/personAdd">&nbsp&nbsp新增人员</a>
       </dd>
-      <dd>
+<!--       <dd>
         <a href="">&nbsp&nbsp所有人员</a>
-      </dd>
+      </dd> -->
     </dl>
   </li>
   <li class="layui-nav-item layui-nav-itemed">
     <a href="javascript:;">屏幕管理</a>
     <dl class="layui-nav-child">
       <dd>
-        <a href="">&nbsp&nbsp所有屏幕</a>
+        <a href="/manage/screenSet">&nbsp&nbsp屏幕设置</a>
       </dd>
     </dl>
   </li>
