--- a/views/screen.ejs
+++ b/views/screen.ejs
@@ -3,8 +3,8 @@
 	<title>prizeShow</title>
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
-	<link rel="stylesheet" href="css/slick.css"/>
-	<link rel="stylesheet" href="css/slick-theme.css"/>
+	<link rel="stylesheet" href="/libs/slick-carousel/slick/slick.css"/>
+	<link rel="stylesheet" href="/libs/slick-carousel/slick/slick-theme.css"/>
 	<style type="text/css">
 	*{
 		margin: 0;
