--- a/views/show/show-item.ejs
+++ b/views/show/show-item.ejs
@@ -1,95 +1,77 @@
+<!DOCTYPE html>
 <html>
-
 <head>
-    <title>奖项详情
-    </title>
-    <link rel="stylesheet" href="css/font-awesome.css">
-
-    <style>
-        a:link {
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: none;
-        }
-
-        a:visited {
-            text-decoration: none;
-        }
-
-        a:active {
-            text-decoration: none;
-        }
-
-        .ziti {
-            font-family: 隶书;
-            color: white;
-            text-align: center;
-            font-size: 80px;
-        }
-
-        .zitib {
-            font-family: 华文行楷;
-            color: white;
-            text-align: center;
-            font-size: 80px;
-        }
-
-        .zitif {
-            font-family: Arial, Helvetica, sans-serif;
-            color: white;
-            text-align: center;
-            font-size: 25px;
-        }
-
-        .pziti {
-            font-family: Arial, Helvetica, sans-serif;
-            color: white;
-            text-align: center;
-            font-size: 45px;
-            float: left;
-        }
-
-        .top {
-            position: fixed;
-            height: 15%;
-            width: 100%;
-            text-align: center;
-        }
-
-        .center {
-            position: fixed;
-            top: 45%;
-            width: 100%;
-            text-align: center;
-        }
-    </style>
+	<title>展示平台</title>
+	<link rel="stylesheet" href="/libs/slick-carousel/slick/slick.css"/>
+	<link rel="stylesheet" href="/libs/slick-carousel/slick/slick-theme.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/show.css">
 </head>
-
-<body style="background: url(/image/rblue.jpg)">
-    <div style="text-align: right;">
-        <div class="top">
-            <a href="/back">
-                <div>
-                    <img src="/image/police.png" width="150px" height="150px">
-                    <div class="zitib">网安支队历年立功授奖展示</div>
-                </div>
-            </a>
-        </div>
-        <div class="center">
-            <%for(var i=0;i<item.length;i++){%>
-                <a href='prize?year=<%=year%>&item=<%= item[i].item%>'>
-                    <span class="ziti"><%= item[i].item%>&nbsp&nbsp</span>
-                </a>
-            <%}%>
-        </div>
-        <div style="padding-right:5%;padding-top: 50%;">
-            <a href="/back">
-                <i class="fa fa-chevron-circle-left" style="font-size:48px;color: white;"></i>
-            </a>
-        </div>
-    </div>
-</body>
-
-</html>
+<body>
+	<div class="show-background">
+		<img src="/image/background.jpg" alt="">
+		<!-- 		<img src="http://img.article.pchome.net/00/38/30/63/pic_lib/wm/chuangyi017.jpg" alt=""> -->
+	</div>
+	<div id="show-container">
+		<div class="show-main">
+			<a href="/show">
+				<div class="show-title">
+					<h1>网安支队历年立功授奖情况</h1>
+				</div>
+			</a>
+			<div class="show-content">
+				<a href="/show">
+					<div class="show-logo">
+						<img src="/image/logo.png" alt="">
+					</div>
+				</a>
+				<div class="show-show">
+					<div class="slick-for">
+						<%if(item.length&&item.length>15){%>
+						<%for(var i=0;i<parseInt(item.length/15);i++){%>
+						<div>
+							<div  class="show-slick">
+								<%for(var j=0;j<15;j++){%>
+								<%if(item[j]){%>
+								<div class="show-item">
+									<div class="show-iitem-line"></div>
+									<div class="show-iitem">
+										<a href='/show/prize?year=<%=year%>&item=<%= item[j+i*15].item%>'>
+											<div class="show-iiitem">
+												<p><%=item[j+i*15].item%></p>
+											</div>
+										</a>
+									</div>
+									<div class="show-iitem-line"></div>
+								</div>
+								<%}else{%>
+								<div class="show-item"></div>
+								<%}%>
+								<%}%>
+							</div>
+						</div>
+						<%}%>
+						<%}else{%>
+						<div>
+							<div  class="show-slick">
+								<%for(var j=0;j<15;j++){%>
+								<%if(item[j]){%>
+								<div class="show-item">
+									<div class="show-iitem-line"></div>
+									<div class="show-iitem">
+										<a href='/show/prize?year=<%=year%>&item=<%= item[j].item%>'>
+											<div class="show-iiitem">
+												<p><%=item[j].item%></p>
+											</div>
+										</a>
+									</div>
+									<div class="show-iitem-line"></div>
+								</div>
+								<%}else{%>
+								<div class="show-item"></div>
+								<%}%>
+								<%}%>
+							</div>
+						</div>
+						<%}%>
+					</div>
+					<%-include('show-footer')%>
