--- a/views/show/show-persons.ejs
+++ b/views/show/show-persons.ejs
@@ -27,11 +27,11 @@
 				<div class="show-show">
 					<div class="slick-for">
 						<%if(person.length&&person.length>15){%>
-							<%for(var i=0;i<parseInt(person.length/15);i++){%>
+							<%for(var i=0;i<=parseInt(person.length/15);i++){%>
 							<div>
 								<div  class="show-slick">
 									<%for(var j=0;j<15;j++){%>
-										<%if(person[j]){%>
+										<%if(person[j+i*15]){%>
 										<div class="show-item">
 											<div class="show-iitem-line"></div>
 											<div class="show-iitem">
@@ -79,8 +79,8 @@
 		</div>
 	</div>
 	<script src="/libs/layui/layui.all.js"></script>
-	<script type="text/javascript" src="libs/jquery/dist/jquery.min.js"></script>
-	<script type="text/javascript" src="libs/slick-carousel/slick/slick.min.js"></script>
+	<script type="text/javascript" src="/libs/jquery/dist/jquery.min.js"></script>
+	<script type="text/javascript" src="/libs/slick-carousel/slick/slick.min.js"></script>
 	<script type="text/javascript">
 		//轮播图初始化
 		$(document).ready(function(){
