--- a/views/show/show-person.ejs
+++ b/views/show/show-person.ejs
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="/css/show.css">
 </head>
 <body>
-	<div class="show-background" style="background-color: #393D49">
-		<!-- <img src="/image/background.jpg" alt=""> -->
+	<div class="show-background">
+		<img src="/image/background.jpg" alt="">
 		<!-- 		<img src="http://img.article.pchome.net/00/38/30/63/pic_lib/wm/chuangyi017.jpg" alt=""> -->
 	</div>
 	<div id="show-container">
@@ -81,9 +81,9 @@
 									<div class="show-iitem-line"></div>
 									<div class="show-iitem">										
 										<div class="show-iiitem">
-											<span style="color:white;font-size: 40px;font-family: 楷体">
+											<span style="font-size: 40px;font-family: 楷体">
 												<%=people[j+i*15].year%>年
-												<%=people[j+i*15].item%>
+												<%=people[j+i*15].item%></br>
 												<%=people[j+i*15].detail%>
 											</span>
 										</div>
@@ -106,9 +106,9 @@
 									<div class="show-iitem-line"></div>
 									<div class="show-iitem">
 										<div class="show-iiitem">
-											<span style="color:white;font-size: 20px;font-family: 楷体">
+											<span style="font-size: 20px;font-family: 楷体">
 												<%=people[j].year%>年
-												<%=people[j].item%>
+												<%=people[j].item%></br>
 												<%=people[j].detail%>
 											</span>
 										</div>
